WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
46079
Fix Opcode stats compilation
https://bugs.webkit.org/show_bug.cgi?id=46079
Summary
Fix Opcode stats compilation
Xan Lopez
Reported
2010-09-20 02:38:20 PDT
ssia.
Attachments
opcodestats.diff
(1.80 KB, patch)
2010-09-20 02:39 PDT
,
Xan Lopez
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Xan Lopez
Comment 1
2010-09-20 02:39:21 PDT
Created
attachment 68064
[details]
opcodestats.diff
Martin Robinson
Comment 2
2010-09-20 08:41:44 PDT
Comment on
attachment 68064
[details]
opcodestats.diff View in context:
https://bugs.webkit.org/attachment.cgi?id=68064&action=prettypatch
Looks sane to me!
> JavaScriptCore/bytecode/Opcode.cpp:34 > +#include <stdio.h>
I prefer C++ style includes <cstdio>, but I don't know if this is a WebKit standard.
Xan Lopez
Comment 3
2010-09-21 03:56:10 PDT
Comment on
attachment 68064
[details]
opcodestats.diff Landed as
r67939
.
Xan Lopez
Comment 4
2010-09-21 03:56:20 PDT
Closing.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug