2010-09-21  Xan Lopez  <xlopez@igalia.com>

Reviewed by Martin Robinson.

        Fix Opcode stats compilation
        https://bugs.webkit.org/show_bug.cgi?id=46079

        The FixedArray API had changed, and <stdio.h> was not included for
        printf.

        * bytecode/Opcode.cpp:
        (JSC::OpcodeStats::~OpcodeStats):

Canonical link: https://commits.webkit.org/58644@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@67939 268f45cc-cd09-0410-ab3c-d52691b4dbfc